RESOLVED FIXED293903
An image with a filter and mix-blend-mode doesn't get mixed, only filtered
https://bugs.webkit.org/show_bug.cgi?id=293903
Summary An image with a filter and mix-blend-mode doesn't get mixed, only filtered
Christopher Kirk-Nielsen
Reported 2025-06-02 08:01:43 PDT
If you apply a filter, like `filter: grayscale()` to an image, and a blend mode, like `mix-blend-mode: screen`, the image is only getting the filter applied, and the blend mode is ignored. In the demo below, it is absolutely positioned to cover the viewport on a green background. Expected: the image's blend mode gets applied Actual: blend mode is ignored Demo: https://codepen.io/chriskirknielsen/pen/ByNKExW?editors=1100 Potentially related: https://bugs.webkit.org/show_bug.cgi?id=169916 Safari version: 18.1.1 (stable) macOS version: 14.7.1 Safari: FAIL Chrome: OK Firefox: OK
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-02 16:07:23 PDT
Matt Woodrow
Comment 2 2025-06-25 19:08:38 PDT
EWS
Comment 3 2025-06-30 14:16:05 PDT
Committed 296827@main (1e13b3de61a0): <https://commits.webkit.org/296827@main> Reviewed commits have been landed. Closing PR #47216 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.